--- a/maquetado/scss/styles.scss
+++ b/maquetado/scss/styles.scss
@@ -1,5 +1,6 @@
 .body-detail {
   display: grid;
+  grid-gap: 15px;
   height: 100vh;
   justify-items: center;
   padding: 40px 60px;
@@ -63,11 +64,13 @@
 @media only screen and (max-width: 1024px) {
 
   .body-detail {
-    grid-template-rows: 1fr 1fr;
-    grid-gap: 10px;
+    height: 100vh;
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 5px;
   }
 
   .redirect-arrow {
+    justify-self: center;
     margin: 0;
     order: 1;
     transform: translateX(10%);
